client/src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background: rgb(12, 12, 12);
  display: flex;
  text-align: center;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

#glass {
  background: #282c34;
  min-height: 90vh;
  max-height: 600px;
  overflow-y: scroll;
}

#page {
  background: rgb(12, 12, 12);
}

#choice {
  background-color: white;
}

.text-center {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.userBox {
  background: #282c34;
}

#back-button {
  background: yellow;
}

#clear-button {
  background: red;
}

